--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 baseurl: ''
 url: 'https://github.com/kiltandcode/deep-fried'
-title: 'Deep-fried'
+title: 'Deep Falsetto'
 description: 'A minimalist Jekyll theme optimized for readability and performance.'
 author: 'Steven McLintock'
 
@@ -38,9 +38,9 @@ site-manifest: '/site.webmanifest'
 # The logo motif
 logo-motif:
   enabled: true
-  src: '/assets/img/deep-fried-chocolate-motif.png'
-  width: '135'
-  height: '90'
+  src: '/assets/img/YM6uaROH_400x400.png'
+  width: '400'
+  height: '400'
 
 # The logo title
 logo-title:
