--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 baseurl: ''
 url: 'https://github.com/kiltandcode/deep-fried'
-title: 'Deep Falsetto'
+title: 'Low Falsetto'
 description: 'A minimalist Jekyll theme optimized for readability and performance.'
 author: 'Steven McLintock'
 
